[package]
name = "fpm-auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.7.0"
actix-web = "4.2.1"
env_logger = "0.9.1"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
diesel = { version = "2.0.2", features = [
    "postgres",
    "r2d2",
    "chrono",
    "uuid",
] }
r2d2 = "0.8.10"
r2d2-diesel = "1.0.0"
rand = "0.8.5"
uuid = { version = "1.2.1", features = ["serde", "v4"] }
oauth2 = "4.2.3"
actix-session = { version = "0.7.2", features = ["cookie-session"] }
http = "0.2.8"
url = "2.3.1"
